--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Chat Inteligente</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Chat com Hyra</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,4 +17,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
